--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "NzI2OTM1NjUwOTU5MzYwMTkz.XvkhlQ.ay5H2s7PsqRzC2KlxAu-hfLRw7g",
+  "token": "ODExMzQ5MDg5MDQ0MDA0OTE0.YCw5uA.HYugReTgDlnwa5rnyXLuy9RC9Ok",
   "join_message": "Thank you for inviting me! Get started with vp.help",
   "owners": [
     319591562654908417
